...
        android:id="@+id/create_listings"/>
    <item android:title="Notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:id="@+id/notifications"/>
    <item android:title="My Account"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:id="@+id/my_account"/>

</menu>
