...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_activity_page">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="219dp"
        android:layout_height="76dp"
        android:layout_centerInParent="true"
...
